# pcloud

./: .coveragerc  .gitignore  .travis.yml  CHANGES.rst  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.rst  LICENSE  MANIFEST.in  README.rst  SECURITY.md  example  example.py  pyproject.toml  setup.cfg  setup.py  sonar-project.properties  test_requirements.txt  tox.ini
.github/: FUNDING.yml
.github/workflows/: pcloud-test.yml  pycloud-test.yml  sonarcloud.yml
docs/: LICENSE.rst  index.rst
src/pcloud/: __init__.py  api.py  binaryprotocol.py  dummyprotocol.py  jsonprotocol.py  oauth2.py  pcloudfs.py  protocols.py  utils.py  validate.py
src/pcloud/tests/: conftest.py  notest_oauth2.py  server.py  test_api.py  test_bin_integration.py  test_fs.py  test_helpers.py  test_integration.py  test_oauth2.py  test_pyfs.py  test_validate.py
src/pcloud/tests/data/: extractarchive.json  file_close.json  file_open.json  getdigest.json  upload.txt  userinfo.json
src/pycloud/: __init__.py  api.py  main.py  validate.py
src/pycloud/tests/: test_validate.py
